--- a/irankar/irankar/pagesHtml/Blog.html
+++ b/irankar/irankar/pagesHtml/Blog.html
@@ -75,17 +75,17 @@
 
         <div class="py-5" style="background-color: #f5f5f5;">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
+                <ol class="breadcrumb container-fluid-Cust">
                     <img src="../Images/Content.png" />
-                    <li class="breadcrumb-item" aria-current="page"><a href="#">خانه</a></li>
-                    <li class="breadcrumb-item" aria-current="page"><a href="#">بلاگ</a></li>
-                    <li class="breadcrumb-item" aria-current="page"><a href="#">1398</a></li>
+                    <li class="breadcrumb-item" aria-current="page"><a href="#" class="deactive-hover">خانه</a></li>
+                    <li class="breadcrumb-item" aria-current="page"><a href="#" class="deactive-hover">بلاگ</a></li>
+                    <li class="breadcrumb-item" aria-current="page"><a href="#" class="deactive-hover">1398</a></li>
                     <li class="breadcrumb-item active" aria-current="page">شهریور</li>
                 </ol>
             </nav>
         </div>
 
-        <div id="MainContentBlog" class="container-fluid row mx-0 justify-content-between">
+        <div id="MainContentBlog" class="container-fluid row mx-0 justify-content-between" style="background-color: #f5f5f5;">
             <!-- Start-Content-Right -->
             <div id="Right-Content" class="col-md-8">
                 <!-- Start-Post-Items -->
@@ -94,7 +94,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog6.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -104,7 +104,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -128,7 +128,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog7.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -138,7 +138,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -162,7 +162,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog8.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -172,7 +172,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -197,7 +197,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog9.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -207,7 +207,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -231,7 +231,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog10.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -241,7 +241,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -265,7 +265,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog11.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -275,7 +275,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -299,7 +299,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog12.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -309,7 +309,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -333,7 +333,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog13.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -343,7 +343,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -367,7 +367,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog14.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -377,7 +377,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -401,7 +401,7 @@
                     <div class="row mb-5">
                         <div class="col-md-4">
                             <div class="img-post">
-                                <img class="d-block" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+                                <img class="d-block" src="../Images/blog15.png" alt="First slide">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -411,7 +411,7 @@
                             <div name="short-desc" class="short-desc">
                                 <p>کتابخانه و موزه ملی ملک، زمان خدمات‌رسانی این گنجینه به پژوهشگران و گردشگران را برای نیمه دوم سال 1398 خورشیدی اعلام کرد.</p>
                             </div>
-                            <div class="container-fluid mx-0 px-0 footer-post">
+                            <div class="mx-0 px-0 footer-post">
                                 <div class="row mx-0 px-0">
 
 
@@ -510,7 +510,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body-cust p-0">
                                     <!--  -->
                                     <div id="Archive-Child" class="container-fluid tab-pane show active fade">
@@ -528,7 +528,7 @@
                                                     </div>
 
                                                 </div>
-                                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-archive">
+                                                <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion-archive">
                                                     <div class="card-body-cust">
                                                         <!--  -->
                                                         <ul class="item-ul">
@@ -596,7 +596,7 @@
         <!-- End-Content-Blog -->
 
         <!-- Start-Brand -->
-        <div style="background-color: #f3f3f0;">
+        <div class="brand-background">
             <div class="container-fluid row d-flex justify-content-between">
                 <div class="col-md-3 d-flex justify-content-center mb-4">
                     <img src="../Images/ministry.png" style="width: 160px; height: 135px; padding-top: 25px;" />
@@ -607,15 +607,15 @@
                         جمهوری فدرال آلمان، پستدام، کد پستی ۱۴۴۶۷<br />
                         تلفن: ۰۰۴۹۰۳۳۱۲۷۹۶۱۰۰
                     </p>
-                    <div class="icon-app">
-                        <a>
-                            <i class="fab fa-instagram"></i>
+                    <div>
+                        <a href="#">
+                            <img src="../Images/instagram.svg" style="width: 35px; height: 35px;" />
                         </a>
-                        <a>
-                            <i class="fab fa-twitter"></i>
+                        <a href="#">
+                            <img src="../Images/twitter.svg" style="width: 35px; height: 35px;" />
                         </a>
-                        <a>
-                            <i class="fab fa-facebook"></i>
+                        <a href="#">
+                            <img src="../Images/facebook.svg" style="width: 35px; height: 35px;" />
                         </a>
                     </div>
                 </div>
@@ -630,7 +630,7 @@
             <div class="col-md-8">
                 <span>کلیه حقوق مادی و معنوی برای ایرانکران محفوظ است.</span>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 text-left">
                 <span>طراحی سایت:‌ گروه هنری نقطه</span>
             </div>
             <div class="col-md-1">
