--- a/irankar/irankar/pagesHtml/BlogPost.html
+++ b/irankar/irankar/pagesHtml/BlogPost.html
@@ -155,7 +155,8 @@
                             <div class="card">
                                 <div class="card-header card-header-cust row mx-0 p-0" id="Comment-Card">
                                     <div class="col-md-6">
-                                        <span>تاریخی</span>
+									<img src="../Images/Content.png" />
+                                        <span>دیدگاه شما</span>
                                     </div>
                                     <div class="col-md-6 text-left">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsecomment" aria-expanded="false" aria-controls="collapsecomment">
@@ -250,7 +251,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body-cust">
                                     <!--  -->
 
@@ -269,7 +270,7 @@
                                                     </div>
 
                                                 </div>
-                                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-archive">
+                                                <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion-archive">
                                                     <div class="card-body-cust">
                                                         <!--  -->
                                                         <ul class="item-ul">
@@ -336,7 +337,7 @@
         <!-- End-Content-Blog -->
 
         <!-- Start-Brand -->
-        <div style="background-color: #f3f3f0;">
+        <div class="brand-background">
             <div class="container-fluid row d-flex justify-content-between">
                 <div class="col-md-3 d-flex justify-content-center mb-4">
                     <img src="../Images/ministry.png" style="width: 160px; height: 135px; padding-top: 25px;" />
@@ -347,15 +348,15 @@
                         جمهوری فدرال آلمان، پستدام، کد پستی ۱۴۴۶۷<br />
                         تلفن: ۰۰۴۹۰۳۳۱۲۷۹۶۱۰۰
                     </p>
-                    <div class="icon-app">
-                        <a>
-                            <i class="fab fa-instagram"></i>
+                    <div>
+                        <a href="#">
+                            <img src="../Images/instagram.svg" style="width: 35px; height: 35px;" />
                         </a>
-                        <a>
-                            <i class="fab fa-twitter"></i>
+                        <a href="#">
+                            <img src="../Images/twitter.svg" style="width: 35px; height: 35px;" />
                         </a>
-                        <a>
-                            <i class="fab fa-facebook"></i>
+                        <a href="#">
+                            <img src="../Images/facebook.svg" style="width: 35px; height: 35px;" />
                         </a>
                     </div>
                 </div>
@@ -370,7 +371,7 @@
             <div class="col-md-8">
                 <span>کلیه حقوق مادی و معنوی برای ایرانکران محفوظ است.</span>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 text-left">
                 <span>طراحی سایت:‌ گروه هنری نقطه</span>
             </div>
             <div class="col-md-1">
